<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="portfolio_title">My Nanodegree Apps</string>
    <string name="btn_spotify">SPOTIFY STREAMER</string>
    <string name="btn_scores">SCORES APP</string>
    <string name="btn_library">LIBRARY APP</string>
    <string name="btn_build">BUILD IT BIGGER</string>
    <string name="btn_bacon">BACON READER</string>
    <string name="btn_capstone">CAPSTONE: MY OWN APP</string>
</resources>
