<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.udacity.oasisaac.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/portfolio_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/btn_spotify"
        android:id="@+id/button1"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:onClick="openApp"
        android:background="@drawable/button_custom" />

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/btn_scores"
        android:id="@+id/button2"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:onClick="openApp"
        android:background="@drawable/button_custom" />

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/btn_library"
        android:id="@+id/button3"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:onClick="openApp"
        android:background="@drawable/button_custom" />

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/btn_build"
        android:id="@+id/button4"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:onClick="openApp"
        android:background="@drawable/button_custom" />

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/btn_bacon"
        android:id="@+id/button5"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:onClick="openApp"
        android:background="@drawable/button_custom" />

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/btn_capstone"
        android:id="@+id/button6"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        android:onClick="openApp"
        android:background="@drawable/button_custom" />


</LinearLayout>
